<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:theme="@style/CustomFontTheme"

    android:layout_height="match_parent">

    <TextView
        style="@style/helpFragmentHeaderStyle"
        android:id="@+id/helpFragment_heading"
        android:background="@color/loginButtonColour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/helpFragmentHeader" />

    <TextView
        android:id="@+id/helpFragment_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/helpFragmentInnerTextStyle"
        android:layout_below="@id/helpFragment_heading"
        android:layout_marginBottom="10dp"
        android:text="@string/helpFragmentIntro" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/helpFragment_intro">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                style="@style/helpFragmentSubHeaderStyle"
                android:layout_height="wrap_content"
                android:text="@string/helpFragmentSubHeader1" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/helpFragmentInnerTextStyle"
                android:text="@string/helpFragmentGrid" />

            <TextView
                android:layout_width="match_parent"
                style="@style/helpFragmentSubHeaderStyle"
                android:layout_height="wrap_content"
                android:text="@string/helpFragmentSubHeader2" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/helpFragmentInnerTextStyle"
                android:text="@string/helpFragmentGameplay" />

            <TextView
                android:layout_width="match_parent"
                style="@style/helpFragmentSubHeaderStyle"
                android:layout_height="wrap_content"
                android:text="@string/helpFragmentSubHeader3" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/helpFragmentInnerTextStyle"
                android:text="@string/helpFragmentConditions" />

            <TextView
                android:layout_width="match_parent"
                style="@style/helpFragmentSubHeaderStyle"
                android:layout_height="wrap_content"
                android:text="@string/helpFragmentSubHeader4" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/helpFragmentInnerTextStyle"
                android:text="@string/helpFragmentDifficultyLevels" />

            <TextView
                android:layout_width="match_parent"
                style="@style/helpFragmentSubHeaderStyle"
                android:layout_height="wrap_content"
                android:text="@string/helpFragmentSubHeader5" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/helpFragmentInnerTextStyle"
                android:text="@string/helpFragmentTips" />

            <TextView
                android:layout_width="match_parent"
                style="@style/helpFragmentSubHeaderStyle"
                android:layout_height="wrap_content"
                android:text="@string/helpFragmentSubHeader6" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/helpFragmentInnerTextStyle"
                android:text="@string/helpFragmentStatisticsProgress" />

            <TextView
                android:layout_width="match_parent"
                style="@style/helpFragmentSubHeaderStyle"
                android:layout_height="wrap_content"
                android:text="@string/helpFragmentSubHeader7" />
            <TextView
                android:layout_width="wrap_content"
                style="@style/helpFragmentInnerTextStyle"
                android:layout_height="wrap_content"
                android:text="@string/helpFragmentOutro" />


        </LinearLayout>

    </ScrollView>

</RelativeLayout>