<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blackbg"
    android:gravity="center"
    android:orientation="vertical"
    android:theme="@style/PixelFont">

    <!-- Top Three Games Pop Up Windows -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/topThreeGamesText"
            style="@style/generalStatsStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topThreeGames"
            android:textSize="35sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/firstGameText"
                style="@style/medalsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:drawableLeftCompat="@drawable/gold_medal_svg" />

            <TextView
                android:id="@+id/firstGamePlaceHolder"
                style="@style/innerSettingsTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Place Holder Text for Pop Up Window"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/secondGameText"
                style="@style/medalsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/silver_medal_svg" />

            <TextView
                android:id="@+id/secondGamePlaceHolder"
                style="@style/innerSettingsTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Place Holder Text for Pop Up Window"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/thirdGameText"
                style="@style/medalsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:drawableLeft="@drawable/bronze_medal_svg" />

            <TextView
                android:id="@+id/thirdGamePlaceHolder"
                style="@style/innerSettingsTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Place Holder Text for Pop Up Window"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>
    <!-- Horizontal Line -->
    <View
        android:layout_width="320dp"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:background="@color/loginButtonColour" />

    <!-- Detailed Stats -->
    <TextView
        android:id="@+id/averageTimeText"
        style="@style/innerSettingsTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/avgTime" />

    <TextView
        android:id="@+id/winPercentageText"
        style="@style/innerSettingsTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/winPercentage" />

    <TextView
        android:id="@+id/losePercentageText"
        style="@style/innerSettingsTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/losePercentage" />

    <TextView
        android:id="@+id/winsText"
        style="@style/innerSettingsTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wins" />

    <TextView
        android:id="@+id/lossesText"
        style="@style/innerSettingsTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/losses" />

    <TextView
        android:id="@+id/gamesPlayedText"
        style="@style/innerSettingsTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gamesPlayed" />

    <TextView
        android:id="@+id/longestWinningStreakText"
        style="@style/innerSettingsTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longestWinningStreak" />

    <TextView
        android:id="@+id/longestLosingStreakText"
        style="@style/innerSettingsTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longestLosingStreak" />

    <TextView
        android:id="@+id/currentStreakText"
        style="@style/innerSettingsTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currentStreak" />

    <!-- Reset Stats Button -->
    <Button
        android:id="@+id/clearStatsButton"
        style="@style/statResetButtonStyle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/loginbutton"
        android:text="@string/clearStatsButton" />

</LinearLayout>

    <!--
    TODO: Stats

    The displayed stats will be:
        - Average time
        - Win percentage
        - Wins
        - Losses
        - Games played
        - Longest winning streak
        - Longest losing streak
        - Current streak
        * Top three games (display by time and display the specific stats)

    https://www.reddit.com/r/Minesweeper/comments/etpbuy/are_my_stats_good/#lightbox
    https://stackoverflow.com/questions/3656371/is-it-possible-to-have-placeholders-in-strings-xml-for-runtime-values
    -->